@@ -39,8 +39,18 @@ h1,h2,h3,h4,h5,h6
 	margin-top: 2em;
 	font-size:0.8em;
 	text-align:right;
-	
 }
+
+.epigraph_main
+{
+	page-break-inside:avoid;
+	margin: auto;
+	margin-bottom: 3em;	
+	margin-top: 2em;
+	font-size:0.8em;
+	text-align:right;
+}
+
 .epigraph_author
 {
     font-weight:bold;
